--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,13 @@ django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 idna==3.7
+iniconfig==2.0.0
+packaging==24.1
+pluggy==1.5.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+pytest==8.2.2
+pytest-django==4.8.0
 requests==2.32.3
 sqlparse==0.5.0
 urllib3==2.2.2
