--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.0.6
 django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==22.0.0
 idna==3.7
 iniconfig==2.0.0
 packaging==24.1
